# masan-report

./: .dockerignore  .gitignore  Dockerfile  README.md  Template_fixed.pptx  Template_full.pptx  Template_full_fixed.pptx  Template_updated.pptx  analyze_charts.py  body.json  docker-compose.yml  main.py  pyproject.toml
src/: chart_editor.py  database.py  drive_client.py  llm_client.py  process_data.py  report_generator.py  text_editor.py
src/cms/: __init__.py  data_mapper.py  export_data.py  fetch_data.py  login.py
src/template/: template.pptx
