[project]
name = "masan-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.30.0",
    "minio>=7.2.0",
]
